--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 body {
-    background: blue;
-  }
+  background: peru;
+}
+h1 {
+    background-color: brown;
+    display:block;
+    font-size: 2em;
+    margin-top: 0.67em;
+    margin-bottom: 0.67em;
+    margin-left: 0%;
+    margin-right: 0%;
+    font-weight: italic;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
